--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "express-fileupload": "^1.2.0",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
-    "hbs": "^4.1.1",
+    "hbs": "^4.1.2",
     "http-errors": "~1.6.3",
     "mongodb": "^3.6.3",
-    "morgan": "~1.9.1",
+    "morgan": "~1.9.1"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.7"
   }
 }
